[package]
name = "changedir"
version = "0.1.1"
edition = "2021"
authors = ["Adrian Challinor <adrian@challinor.org>"]
description = "Intelligent directory bookmarking and navigation tool"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
colored = "2.1"
inquire = "0.7"

